// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`membercount should reply with an error when the outfit does not exist 1`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/outfit",
  "searchParams": Object {
    "alias_lower": "nope",
  },
}
`;

exports[`membercount should work for a custom outfit 1`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/outfit",
  "searchParams": Object {
    "alias_lower": "cstm",
  },
}
`;

exports[`membercount should work for the default outfit 1`] = `
Object {
  "pathname": "/s:test/get/ps2:v2/outfit",
  "searchParams": Object {
    "outfit_id": "37581022577821398",
  },
}
`;
